--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-midnight
-title: MikeARiv - Inital GitHub Page
-description: Please return weekly to track my progression as a developer.
+title: MikeARiv - Electronic Portfolio
+description: Please consider following to track my progression as a developer.
